# GCXL-Conveying-Robot-CV

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  set_config.py  show_pic.py  take_pic.py
config/: cam.yaml  test.yaml
config/environment/: camera.rules  junkcar_Env.md
config/src/: .p10k.zsh  .zshrc  install_font.sh  one_punch.sh  udev_config
include/: Cam_MT.h  Detector.h  My_Task.hpp  My_Test.hpp  USB_Cam.h  essential.h
refer/: 1.py  main_without_my_task.cpp  serial_demo.cpp
refer/TCP/: tcp-client.cpp  tcp-server.cpp
refer/TCPIP/: TCP_Client.hpp  TCP_IP.hpp  TCP_Server.hpp
refer/UDP/: udp-client.cpp
report/src/: FDi.bib  lab_report(zh_cn).aux  lab_report(zh_cn).bbl  lab_report(zh_cn).blg  lab_report(zh_cn).tex  lab_report(zh_cn).toc
report/src/imgs/: process.pdf_tex
serial_port/include/serial_port/: fixed_common_base.h  fixed_packet.h  serial_interface.h  serial_port.h  serialport_trans_dev.h  trans_dev_interface.h
serial_port/script/: creat_proto_interface.py  proto.csv  proto.txt
serial_port/src/: fixed_common_base.cpp  fixed_packet.cpp  serial_interface.cpp  serial_port.cpp  serialport_trans_dev.cpp
src/: Cam_MT.cpp  Detector.cpp  USB_Cam.cpp
test/: RealTimeCap.py  bar.py  fswebcam_auto_test.sh  get_x_y.py  test_HSV.py  test_MT.cpp  test_config.cpp  test_detector.cpp  test_find_target.py  test_hough.py
test/UDP/: test_udp_server.cpp
